--- a/motorista/templates/base.html
+++ b/motorista/templates/base.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="../static/css/demo.css" />
   <link rel="stylesheet" type="text/css" href="../static/css/component.css" />
   <script src="../static/js/modernizr.custom.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="container">
