alterando logo do menu

--- a/motorista/static/css/component.css
+++ b/motorista/static/css/component.css
@@ -9,9 +9,9 @@
 @font-face {
 		font-weight: normal;
 		font-style: normal;
-		font-family: 'ecoicons';
-		src: url("../fonts/ecoicons/ecoicons.eot");
-		src: url("../fonts/ecoicons/ecoicons.eot?#iefix") format("embedded-opentype"), url("../fonts/ecoicons/ecoicons.woff") format("woff"), url("../fonts/ecoicons/ecoicons.ttf") format("truetype"), url("../fonts/ecoicons/ecoicons.svg#ecoicons") format("svg");
+		font-family: 'icomoon';
+		src: url("../fonts/icomoon/icomoon.eot");
+		src: url("../fonts/icomoon/icomoon.eot?#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.woff") format("woff"), url("../fonts/icomoon/icomoon.ttf") format("truetype"), url("../fonts/icomoon/icomoon.svg#ecoicons") format("svg");
 }
 
 /* Icomoon.com */
@@ -219,56 +219,24 @@ input.gn-search:focus {
 		font-weight: normal;
 		font-style: normal;
 		font-variant: normal;
-		font-family: 'ecoicons';
+		font-family: 'icomoon';
 		line-height: 1;
 		speak: none;
 		-webkit-font-smoothing: antialiased;
 }
 
-.gn-icon-help::before {
-		content: "\e000"
+.gn-icon-viagem::before {
+		content: "\e9b0"
 }
 
-.gn-icon-earth::before {
-		content: "\e004"
+.gn-icon-login::before {
+		content: "\e971";
+		width: 32px;
 }
 
-.gn-icon-cog::before {
-		content: "\e006"
+.gn-icon-ocorrencias::before{
+	content: "\e92d";
 }
-
-.gn-icon-search::before {
-		content: "\e005"
-}
-
-.gn-icon-download::before {
-		content: "\e007"
-}
-
-.gn-icon-photoshop::before {
-		content: "\e001"
-}
-
-.gn-icon-illustrator::before {
-		content: "\e002"
-}
-
-.gn-icon-archive::before {
-		content: "\e00d"
-}
-
-.gn-icon-article::before {
-		content: "\e003"
-}
-
-.gn-icon-pictures::before {
-		content: "\e008"
-}
-
-.gn-icon-videos::before {
-		content: "\e009"
-}
-
 /* if an icon anchor has a span, hide the span */
 
 .gn-icon span {
@@ -316,7 +284,7 @@ input.gn-search:focus {
 		height: 60px
 }
 
-@media screen and (max-width: 422px) { 
+@media screen and (max-width: 422px) {
 	.gn-menu-wrapper.gn-open-all {
 			-webkit-transform: translateX(0px);
 			-moz-transform: translateX(0px);
