--- a/motorista/templates/base.html
+++ b/motorista/templates/base.html
@@ -20,16 +20,17 @@
           <div class="gn-scroller">
             <ul class="gn-menu">
               <li>
-                <a class="gn-icon gn-icon-download">Viagem</a>
+                <a class="gn-icon gn-icon-viagem">Viagem</a>
               </li>
-              <li><a class="gn-icon gn-icon-cog">Settings</a></li>
-              <li><a class="gn-icon gn-icon-help">Help</a></li>
-              <li><a class="gn-icon gn-icon-archive">Archives</a></li>
+              <li><a class="gn-icon gn-icon-ocorrencias">Ocorrências</a></li>
             </ul>
           </div><!-- /gn-scroller -->
         </nav>
       </li>
       <li></li>
+      <li>
+        <a class="gn-icon gn-icon-login" href="#">Login</a>
+      </li>
     </ul>
   </div><!-- /container -->
   <script src="../static/js/classie.js"></script>
