--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,12 +1,22 @@
 {% extends 'base.html' %}
-
+{%block header %}
+{{block.super}}
+<link rel="stylesheet" type="text/css" href="../static/css/login.css" />
+{% endblock %}
 {% block title %}Login{% endblock %}
-
+{%block menu%}
+{%endblock%}
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
+<div class="container-login">
+  <div class="login-screen">
+    <div class="app-title">
+      <h1>Login</h1>
+    </div>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button class="btn btn-primary btn-large btn-block" type="submit">Login</button>
   </form>
+  </div>
+</div>
 {% endblock %}
