--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,14 +30,11 @@
           </div><!-- /gn-scroller -->
         </nav>
       </li>
-      <li></li>
       <li>
         {% if user.is_authenticated %}
-        <a class="gn-icon gn-icon-login" href="/logout">Logout</a>
-        <span>{{ user.username }}</span>
+        <a class="gn-icon gn-icon-auth" href="/logout">{{ user.username }}</a>
         {% else %}
         <a class="gn-icon gn-icon-login" href="/login">login</a>
-        <span>{{ user.username }}</span>
         {% endif %}
       </li>
     </ul>
