--- a/app/templates/logged_out.html
+++ b/app/templates/logged_out.html
@@ -11,7 +11,7 @@
 <div class="container-logout">
   <div class="login-screen">
     <div class="app-title">
-      <h1>Logged out efetuado com sucesso</h1>
+      <h1>Logout efetuado com sucesso</h1>
     </div>
   </div>
 </div>
