--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,14 +3,12 @@
 <head>
 {% block header %}
 <title>Eagle Eye</title>
-  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../static/css/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="../static/css/demo.css" />
-  <link rel="stylesheet" type="text/css" href="../static/css/component.css" />
-  <script src="../static/js/modernizr.custom.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
+  <link rel="shortcut icon" type="image/png" href="../static/img/favicon.ico"/>
+  <link rel="stylesheet" type="text/css" href="../static/css/normalize.min.css" />
+  <link rel="stylesheet" type="text/css" href="../static/css/demo.min.css" />
+  <link rel="stylesheet" type="text/css" href="../static/css/component.min.css" />
 </head>
 {% endblock %}
 <body>
@@ -39,13 +37,15 @@
       </li>
     </ul>
   </div><!-- /container -->
-  <script src="../static/js/classie.js"></script>
-  <script src="../static/js/gnmenu.js"></script>
-  <script>
-    new gnMenu( document.getElementById( 'gn-menu' ) );
-  </script>
 {% endblock %}
 {% block content %}{% endblock %}
-
+<script src="../static/js/classie.min.js"></script>
+<script src="../static/js/gnmenu.min.js"></script>
+<script>
+  new gnMenu( document.getElementById( 'gn-menu' ) );
+</script>
+<script src="../static/js/modernizr.custom.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 </html>
