--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,12 +28,21 @@
           </div><!-- /gn-scroller -->
         </nav>
       </li>
-      <li>
+      <li class="gn-trigger-right">
         {% if user.is_authenticated %}
-        <a class="gn-icon gn-icon-auth" href="/logout">{{ user.username }}</a>
+        <a class="gn-icon-menu-right"><span>{{ user.username }}</span></a>
+        <nav class="gn-menu-wrapper-right">
+          <div class="gn-scroller-right">
+            <ul class="gn-menu">
+              <li><a class="gn-icon gn-icon-notifica" href="#">Notificações</a></li>
+              <li><a class="gn-icon gn-icon-auth" href="/logout">Logout</a></li>
+            </ul>
+          </div><!-- /gn-scroller -->
+        </nav>
         {% else %}
-        <a class="gn-icon gn-icon-login" href="/login">login</a>
-        {% endif %}
+        <a class="gn-icon-menu-right" href="/login"><span class="gn-icon gn-icon-login">Realizar Login</span></a>
+        </nav>
+        {%endif%}
       </li>
     </ul>
   </div><!-- /container -->
@@ -41,8 +50,10 @@
 {% block content %}{% endblock %}
 <script src="../static/js/classie.min.js"></script>
 <script src="../static/js/gnmenu.min.js"></script>
+<!-- <script src="../static/js/gnmenu.min.js"></script> -->
 <script>
   new gnMenu( document.getElementById( 'gn-menu' ) );
+  new gnMenuRight( document.getElementById( 'gn-menu' ) );
 </script>
 <script src="../static/js/modernizr.custom.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
