--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,8 +28,8 @@
           </div><!-- /gn-scroller -->
         </nav>
       </li>
-      <li class="gn-trigger-right">
         {% if user.is_authenticated %}
+      <li class="gn-trigger-right">
         <a class="gn-icon-menu-right"><span>{{ user.username }}</span></a>
         <nav class="gn-menu-wrapper-right">
           <div class="gn-scroller-right">
@@ -40,7 +40,8 @@
           </div><!-- /gn-scroller -->
         </nav>
         {% else %}
-        <a class="gn-icon-menu-right" href="/login"><span class="gn-icon gn-icon-login">Realizar Login</span></a>
+        <li>
+        <a class="" href="/login"><span class="gn-icon gn-icon-login">Realizar Login</span></a>
         </nav>
         {%endif%}
       </li>
