--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -12,12 +12,58 @@
 
 body {
 	background: #34495e;
+	font-family: 'Lato', Arial, sans-serif;
 }
-
+#map {
+  height: 400px;
+  width: 100%;
+ }
+.warning{
+	 color: red;
+}
 .container-full{
-	margin:69px;
+	margin-top: 69px;
+	margin-left: 69px;
 }
 
+.container-card{
+	width: 320px;
+	background-color: #fff;
+	float: left;
+  margin: 10px;
+	border-radius: 5px;
+}
+.container-card-unit{
+	background-color: #fff;
+	width: 84%;
+	border-radius: 5px;
+}
+.description-card{
+	padding: 5px;
+}
+.description-card-unit{
+	padding: 5px;
+}
+.ver_viagem{
+	float: left;
+  width: 125px;
+  border-radius: 5px;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-left: 16px;
+  background: #34495e;
+  color: #ffffff;
+}
+.ver_ocorrencia{
+	float: right;;
+	width: 125px;
+	background: #34495e;
+  color: #ffffff;
+	border-radius: 5px;
+	text-align: center;
+	margin-bottom: 10px;
+	margin-right: 16px;
+}
 .container > header,
 .codrops-top {
 	color: #fff;
@@ -140,8 +186,24 @@ body {
 	}
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 768px) {
+	.container-full{
+		margin-top: 69px;
+    margin-left: 44px;
+	}
+	.container-card-unit{
+		width: 93%;
+	}
+}
 
+@media screen and (max-width: 740px) {
+	.container-full{
+		margin-top: 69px;
+    margin-left: 20px;
+	}
+	.container-card-unit{
+		width: 95%;
+	}
 	.codrops-icon span {
 		display: none;
 	}
