--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,10 +4,10 @@
 {% block header %}
 <title>Eagle Eye</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/png" href="../static/img/favicon.ico"/>
-  <link rel="stylesheet" type="text/css" href="../static/css/normalize.min.css" />
-  <link rel="stylesheet" type="text/css" href="../static/css/demo.min.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
+  <link rel="shortcut icon" type="image/png" href="/static/img/favicon.ico"/>
+  <link rel="stylesheet" type="text/css" href="/static/css/normalize.min.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/demo.min.css" />
   <link rel="stylesheet" type="text/css" href="../static/css/component.min.css" />
 </head>
 {% endblock %}
@@ -16,14 +16,16 @@
   <div class="container">
     <ul id="gn-menu" class="gn-menu-main">
       <li class="gn-trigger">
-        <a class="gn-icon gn-icon-menu"><span>Menu</span></a>
+        <!-- <a class="gn-icon gn-icon-menu"><span class="gn-icon gn-icon-notifica-nome">Menu</span></a> -->
+        <a class="gn-icon gn-icon-menu"><span class="">Menu</span></a>
         <nav class="gn-menu-wrapper">
           <div class="gn-scroller">
             <ul class="gn-menu">
               <li>
-                <a class="gn-icon gn-icon-viagem" href="/viagem">Viagem</a>
+                <a class="gn-icon gn-icon-viagem" href="/lista_viagem">Viagem</a>
               </li>
-              <li><a class="gn-icon gn-icon-ocorrencias" href="/ocorrencia">Ocorrências</a></li>
+              <!-- <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Ocorrências<span class="gn-icon gn-icon-notifica"></span></a></li> -->
+              <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Ocorrências</a></li>
             </ul>
           </div><!-- /gn-scroller -->
         </nav>
@@ -34,7 +36,6 @@
         <nav class="gn-menu-wrapper-right">
           <div class="gn-scroller-right">
             <ul class="gn-menu">
-              <li><a class="gn-icon gn-icon-notifica" href="#">Notificações</a></li>
               <li><a class="gn-icon gn-icon-auth" href="/logout">Logout</a></li>
             </ul>
           </div><!-- /gn-scroller -->
@@ -49,14 +50,13 @@
   </div><!-- /container -->
 {% endblock %}
 {% block content %}{% endblock %}
-<script src="../static/js/classie.min.js"></script>
-<script src="../static/js/gnmenu.min.js"></script>
-<!-- <script src="../static/js/gnmenu.min.js"></script> -->
+<script src="/static/js/classie.min.js"></script>
+<script src="/static/js/gnmenu.min.js"></script>
 <script>
   new gnMenu( document.getElementById( 'gn-menu' ) );
   new gnMenuRight( document.getElementById( 'gn-menu' ) );
 </script>
-<script src="../static/js/modernizr.custom.min.js"></script>
+<script src="/static/js/modernizr.custom.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
