--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,13 @@
 <head>
 {% block header %}
 <title>Eagle Eye</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
   <link rel="shortcut icon" type="image/png" href="/static/img/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="/static/css/normalize.min.css" />
   <link rel="stylesheet" type="text/css" href="/static/css/demo.min.css" />
-  <link rel="stylesheet" type="text/css" href="../static/css/component.min.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/component.min.css" />
 </head>
 {% endblock %}
 <body>
