--- a/app/templates/index_ocorrencia.html
+++ b/app/templates/index_ocorrencia.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-full">
+<div class="container-full" style="padding:0px">
 {% for ocorrencia in ocorrencia %}
     <div class="container-card">
       <div class="description-card">
