--- a/app/templates/index_viagem.html
+++ b/app/templates/index_viagem.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container-full">
+<div class="container-full" style="padding:0px">
 {% for viagem in viagem %}
     <div class="container-card">
       <div class="description-card">
