--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
   <link rel="shortcut icon" type="image/png" href="/static/img/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="/static/css/normalize.min.css" />
-  <link rel="stylesheet" type="text/css" href="/static/css/demo.min.css" />
-  <link rel="stylesheet" type="text/css" href="/static/css/component.min.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/component.css" />
 </head>
 {% endblock %}
 <body>
