--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -31,6 +31,7 @@ body {
 	float: left;
   margin: 8px;
 	border-radius: 5px;
+	min-width: 300px;
 }
 .container-card-unit{
 	background-color: #fff;
