--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -53,6 +53,8 @@ body {
   margin-left: 16px;
   background: #34495e;
   color: #ffffff;
+	height: 40px;
+  padding-top: 9px;
 }
 .ver_ocorrencia{
 	float: right;;
