--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -54,7 +54,7 @@ body {
   background: #34495e;
   color: #ffffff;
 	height: 40px;
-  padding-top: 9px;
+	padding-top: 9px;
 }
 .ver_ocorrencia{
 	float: right;;
@@ -65,6 +65,8 @@ body {
 	text-align: center;
 	margin-bottom: 10px;
 	margin-right: 16px;
+	height: 40px;
+	padding-top: 9px;
 }
 .container > header,
 .codrops-top {
