--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,11 +22,14 @@
         <nav class="gn-menu-wrapper">
           <div class="gn-scroller">
             <ul class="gn-menu">
-              <li>
-                <a class="gn-icon gn-icon-viagem" href="/lista_viagem">Viagem</a>
-              </li>
+              <li><a class="gn-icon gn-icon-viagem" href="/lista_viagem">Listar Viagens</a></li>
+              <li><a class="gn-icon gn-nova-viagem" href="/viagem/add_viagem">Cadastrar Viagem</a></li>
+              <li><a class="gn-icon gn-icon-motoristas" href="/lista_motorista">Listar Motoristas</a></li>
+              <li><a class="gn-icon gn-icon-motorista" href="/motorista/add_motorista">Cadastrar Motorista</a></li>
+              <li><a class="gn-icon gn-icon-veiculos" href="/lista_veiculo">Listar Veiculos</a></li>
+              <li><a class="gn-icon gn-icon-veiculo" href="/veiculo/add_veiculo">Cadastrar Veiculo</a></li>
               <!-- <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Ocorrências<span class="gn-icon gn-icon-notifica"></span></a></li> -->
-              <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Ocorrências</a></li>
+              <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Listar Ocorrências</a></li>
             </ul>
           </div><!-- /gn-scroller -->
         </nav>
