--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,21 +1,19 @@
 {% extends 'base.html' %}
 {%block header %}
 {{block.super}}
-<link rel="stylesheet" type="text/css" href="/static/css/login.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/add.css" />
 {% endblock %}
-{% block title %}Login{% endblock %}
-{%block menu%}
-{%endblock%}
+{% block title %}Adicionar Viagem{% endblock %}
 {% block content %}
-<div class="container-login">
+<div class="container-add">
   <div class="login-screen">
     <div class="app-title">
-      <h1>Login</h1>
+      <h1>Cadastrar Viagem</h1>
     </div>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button class="btn btn-primary btn-large btn-block" type="submit">Login</button>
+      <button class="btn btn-primary btn-large btn-block" type="submit">Cadastrar</button>
   </form>
   </div>
 </div>
