--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -89,6 +89,12 @@ select{
   border-radius: 3px;
   height: 30px;
 }
+.iniciar{
+	width: 90%;
+  margin: 0 auto;
+  float: unset;
+  margin-bottom: 10px;
+}
 .container > header,
 .codrops-top {
 	color: #fff;
