--- a/app/templates/index_viagem.html
+++ b/app/templates/index_viagem.html
@@ -12,18 +12,22 @@
             <p class="warning"><label>Motorista: </label> Motorista não definido *</p>
           {% endif %}
           {% if viagem.status_viagem == 'nao_iniciada' %}
-          <p class="warning"><label></label> Viagem não Iniciada*</p>
+          <p class="warning"><label>Origem Viagem: </label>Viagem não Iniciada*</p>
+          <p class="warning"><label>Destino Viagem: </label>Viagem não Iniciada*</p>
+          <p class="warning"><label>Inicio Viagem: </label>Viagem não Iniciada*</p>
+          <p class="warning"><label>Fim Viagem: </label>Viagem não Iniciada*</p>
+          <p class="warning"><label>Status Viagem: </label>Viagem não Iniciada*</p>
           {% else %}
           <p><label>Origem Viagem: </label> {{ viagem.origem_viagem }}</p>
           <p><label>Destino Viagem: </label> {{ viagem.destino_viagem }}</p>
           <p><label>Inicio Viagem: </label> {{ viagem.data_inicio_viagem }}</p>
           <p><label>Fim Viagem: </label> {{ viagem.data_fim_viagem }}</p>
           <p><label>Status Viagem: </label> {{ viagem.status_viagem }}</p>
+          {% endif %}
           {% if viagem.status_ocorrencia == True %}
           <p><label>Status Ocorrencia: </label> Possui Ocorrencia <span class="warningtrue"></span></p>
           {% else %}
           <p class="warningfalse"><label>Status Ocorrencia: </label> Sem Ocorrencias</p>
-          {% endif %}
           {% endif %}
           <a href="/viagem/{{viagem.cd_viagem}}"><div class="ver_viagem"> Ver Viagem</div></a>
       </div>
