alterando mask https

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -3,7 +3,7 @@
 {{block.super}}
 <link rel="stylesheet" type="text/css" href="/static/css/add.css" />
 {% if form.Meta.name == 'Motorista' %}
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.min.js"></script>
 <script>
 $(document).ready(function(){
   $("#id_cpf_motorista").addClass('masked');
@@ -18,7 +18,7 @@ span#id_cpf_motoristaMask {
 {% else %}
 {% endif %}
 {% if form.Meta.name == 'Veiculo' %}
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.min.js"></script>
 <script>
 $(document).ready(function(){
   $("#id_placa_veiculo").addClass('masked');
