ajustando mask ano do veiculo

--- a/app/templates/index_veiculo.html
+++ b/app/templates/index_veiculo.html
@@ -9,7 +9,7 @@
         <p><label>Cor Veiculo: </label> {{ veiculo.cor_veiculo }}</p>
         <p><label>Modelo Veiculo: </label> {{ veiculo.modelo_veiculo }}</p>
         <p><label>Marca Veiculo: </label> {{ veiculo.marca_veiculo }}</p>
-        <p><label>Ano Veiculo: </label> {{ veiculo.marca_veiculo }}</p>
+        <p><label>Ano Veiculo: </label> {{ veiculo.ano_veiculo }}</p>
       </div>
     </div>
 {% endfor %}
