--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -36,6 +36,7 @@ body {
   margin: 8px;
 	border-radius: 5px;
 	min-width: 300px;
+	max-width: 300px;
 }
 .container-card-unit{
 	background-color: #fff;
@@ -225,6 +226,7 @@ select{
 	}
 	.container-card{
 		width: 96%;
+		max-width: unset;
 	}
 }
 @media screen and (max-width: 768px) and (min-width:750px){
@@ -243,6 +245,7 @@ select{
 	}
 	.container-card{
 		width: 96%;
+		max-width: unset;
 	}
 	.codrops-icon span {
 		display: none;
